[workspace]
resolver = "2"
members = ["pcap-parser", "sonettobuf"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
pcap-file = "1.0"
byteorder = "1.4"
thiserror = "2.0.12"
num_enum = "0.7.4"
tokio = "1.46.1"
serde_json = "1.0.140"
clap = { version = "4", features = ["derive"] }

prost = "0.13.5"
prost-types = "0.13.5"
prost-build = "0.13.5"
sonettobuf = { path = "sonettobuf" }